--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -5,7 +5,7 @@
       layout:decorate="1erTemplate">    <!--la liaison avec la page creer-->
 <head>
     <meta charset="UTF-8">
-    <title>Patients</title>
+    <title>Curiculums</title>
 </head>
 <body>
 <div layout:fragment="content1">   <!--la liaison avec la page creer-->
