--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
                 <a class="nav-link active" th:href="@{index}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Emploi Du Temps</a>
+                <a class="nav-link active" th:href="@{Offre}">Offre d'emploi</a>
             </li>
 
         </ul>
